[gd_scene load_steps=7 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Rocket Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://juego/Menus/MenuInicio.gd" type="Script" id=3]
[ext_resource path="res://recursos/audio/sfx/select_2.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="MenuInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
menu_ajustes = "res://juego/Menus/MenuAjustes.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.0196078, 0.152941, 1 )

[node name="Titulo" type="Label" parent="."]
anchor_right = 1.0
margin_top = 120.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "GODOTIN"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -37.84
margin_right = 123.0
margin_bottom = 37.84
alignment = 1

[node name="BotonCargar" type="Button" parent="VBoxContainer"]
margin_right = 246.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "CARGAR"

[node name="BotonNuevo" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 246.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "NUEVO"

[node name="BotonOpciones" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 246.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "OPCIONES"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 246.0
margin_bottom = 148.0

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 246.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "SALIR"

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/BotonNuevo" to="." method="_on_BotonNuevo_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonOpciones" to="." method="_on_BotonOpciones_pressed"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
